# codexia

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.example.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  index.html  justfile  package.json  vite.config.ts
cc/: Cargo.toml
cc/src/: claude_binary.rs  claude_discovery.rs  lib.rs  web_server.rs
cc/src/commands/: agents.rs  claude.rs
cc/src/process/: registry.rs
codex-client/: Cargo.toml
codex-client/src/: events.rs  lib.rs  state.rs
codex-client/src/client/: handlers.rs  mod.rs  readers.rs
codex-client/src/commands/: accounts.rs  conversation.rs  initialize.rs  mcp.rs  mod.rs  reviews.rs
codex-client/src/commands/config/: profile.rs  project.rs  provider.rs
codex-client/src/commands/session_files/: cache.rs  delete.rs  get.rs  scanner.rs  update.rs  usage.rs
codex-client/src/config/: mod.rs  profile.rs  provider.rs
codex-client/src/db/: favorites.rs  mod.rs  scan_info.rs  sessions.rs  usage.rs
codex-client/src/services/: coder.rs  codex.rs
codex-client/src/session_files/: cache.rs  db.rs  delete.rs  get.rs  mod.rs  scanned_cache.rs  scanner.rs  update.rs  usage.rs
codex-client/src/transport/: stdio.rs
codex-client/src/utils/: codex_discovery.rs  command.rs  mod.rs  wsl.rs
codex_bindings/: Cargo.toml
codex_bindings/src/: lib.rs
crates/cc/: Cargo.toml
crates/cc/src/: db.rs  lib.rs  mcp_unified.rs  scan.rs  state.rs
crates/cc/src/automation/: execution.rs  mod.rs  runtime.rs  service.rs
crates/cc/src/services/: message_service.rs  mod.rs  permission_storage.rs  session_service.rs
crates/codex/: Cargo.toml
crates/codex/src/: app_server.rs  env.rs  lib.rs  scan.rs  server_request.rs
crates/codex/src/config/: provider.rs
crates/db/: Cargo.toml
crates/db/src/: automation_runs.rs
crates/git/: Cargo.toml
crates/git/src/: actions.rs  branch.rs  diff.rs  helpers.rs  lib.rs  staging.rs  stats.rs  status.rs  types.rs  worktree.rs
crates/shared/: Cargo.toml
crates/shared/src/: event_sink.rs  lib.rs  mcp.rs  mod.rs  skills.rs  skillssh.rs  sleep.rs  state.rs  terminal.rs
crates/shared/src/fs/: mod.rs  watcher.rs
export_bindings/: Cargo.toml
export_bindings/src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_state.rs  app_types.rs  cmd.rs  codex.rs  codex_client.rs  commands.rs  config.rs  dxt.rs  env.rs  error.rs  event_sink.rs  export_bindings.rs  filesystem.rs  gui.rs  jsonrpc.rs  lib.rs  main.rs  mcp.rs  menu.rs  protocol.rs  state.rs  terminal.rs  tray.rs  tunnel.rs  web.rs  window.rs
src-tauri/src/cc/: commands.rs  db.rs  mcp.rs  mod.rs  scan.rs  state.rs  types.rs
src-tauri/src/cc/services/: message_service.rs  mod.rs  session_service.rs  settings_service.rs  skill_service.rs
src-tauri/src/cc_commands/: commands.rs  db.rs  mcp.rs  mod.rs  state.rs  types.rs
src-tauri/src/cc_commands/services/: message_service.rs  mod.rs  project_service.rs  session_service.rs  skill_service.rs
src-tauri/src/codex/: app_server.rs  client.rs  commands.rs  event_sink.rs  llms.json  mod.rs  providers.rs  scan.rs  server_request.rs  utils.rs
src-tauri/src/codex/client/: handlers.rs  mod.rs  readers.rs  transport.rs
src-tauri/src/codex/config/: mcp.rs  mod.rs  profile.rs  provider.rs  toml_helpers.rs
src-tauri/src/codex/services/: coder.rs  mod.rs
src-tauri/src/codex/session_files/: cache.rs  mod.rs  scanner.rs  update.rs
src-tauri/src/codex/v1/: mcp.rs  mod.rs  state.rs
src-tauri/src/codex/v2/: codex.rs  git.rs  mod.rs  settings.rs  state.rs  storage.rs  types.rs  workspaces.rs
src-tauri/src/codex_client/: client.rs  command_builder.rs  event_handler.rs  mod.rs  process_manager.rs
src-tauri/src/codex_commands/: accounts.rs  check.rs  config.rs  conversation.rs  events.rs  initialize.rs  listeners.rs  mcp.rs  mod.rs  protocol.rs  reviews.rs  scanned_projects.rs  session_files.rs  state.rs
src-tauri/src/codex_commands/config/: mod.rs  profile.rs  project.rs  provider.rs
src-tauri/src/codex_commands/session_files/: cache.rs  delete.rs  get.rs  mod.rs  notes.rs  scanner.rs  update.rs  usage.rs
src-tauri/src/commands/: automation.rs  cc.rs  check.rs  codex.rs  dxt.rs  env.rs  file.rs  filesystem.rs  fs.rs  git.rs  insights.rs  mcp.rs  mod.rs  notes.rs  remote.rs  skill.rs  skills.rs  skillssh.rs  sleep.rs  terminal.rs  usage.rs  window.rs
src-tauri/src/config/: mod.rs  profile.rs  project.rs  provider.rs  toml_helpers.rs
src-tauri/src/database/: backup.rs  migration.rs  mod.rs
src-tauri/src/db/: automation_runs.rs  conn.rs  mod.rs  notes.rs
src-tauri/src/features/: automation.rs  dxt.rs  event_sink.rs  git.rs  insights.rs  mcp.rs  mod.rs  p2p_bridge.rs  skills.rs  skillssh.rs  sleep.rs  usage.rs
src-tauri/src/filesystem/: directory_ops.rs  file_analysis.rs  file_io.rs  file_types.rs  git_diff.rs  git_status.rs  git_worktree.rs  mod.rs  watch.rs
src-tauri/src/p2p/: client.rs  commands.rs  mod.rs  router_handle.rs  server.rs  stun.rs
src-tauri/src/services/: codex.rs  mod.rs  remote.rs  session.rs  skill.rs
src-tauri/src/session_files/: cache.rs  delete.rs  get.rs  mod.rs  save.rs  scan.rs  scanner.rs  usage.rs  utils.rs
src-tauri/src/shared/: event_sink.rs  mod.rs  skills.rs  skillssh.rs  sleep.rs
src-tauri/src/utils/: coder_discovery.rs  codex_discovery.rs  file.rs  logger.rs  mod.rs  time.rs
src-tauri/src/web/: mod.rs  router.rs  server.rs  server_web.rs  terminal.rs  types.rs  watcher.rs
src-tauri/src/web_server/: filesystem_watch.rs  handlers.rs  mod.rs  router.rs  server.rs  server_web.rs  types.rs  websocket.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs  router.rs  server_web.rs  terminal.rs  types.rs  watcher.rs  websocket.rs
web/src/handlers/: automation.rs  cc.rs  codex.rs  dxt.rs  file.rs  git.rs  insights.rs  mod.rs  note.rs  settings.rs  skills.rs  skillssh.rs  terminal.rs  types.rs
(+1044 files in other folders)
