[package]
name = "cc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
dirs.workspace = true
uuid.workspace = true
which.workspace = true
tauri.workspace = true
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
zstd = "0.13"
base64.workspace = true
walkdir.workspace = true
regex.workspace = true

# Web server dependencies
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
futures-util = "0.3"
serde_yaml = "0.9.34"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"