[package]
name = "codex-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
toml = "0.9.5"
toml_edit = "0.20"
base64 = "0.22.1"
regex = "1.12.2"
rusqlite = { version = "0.31.0", features = ["bundled"] }

codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "54e6e4ac" }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "54e6e4ac" }
