[package]
name = "codex-client"
version = "0.2.0"
edition = "2021"

[dependencies]
# Removed tauri dependency - codex-client is now independent
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
toml = "0.9.5"
toml_edit = "0.20"
base64 = "0.22.1"
regex = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }

# async trait support
async-trait = "0.1"

# anyhow for error handling
anyhow = "1.0"

codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "dbec741e" }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "dbec741e" }