[package]
name = "codex-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Removed tauri dependency - codex-client is now independent
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
walkdir.workspace = true
chrono.workspace = true
dirs.workspace = true
toml.workspace = true
toml_edit.workspace = true
base64.workspace = true
regex.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
anyhow.workspace = true

codex-app-server-protocol.workspace = true
codex-protocol.workspace = true

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"