[package]
name = "codex_bindings"
version = "0.1.0"
edition = "2024"

[dependencies]
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", rev = "dbec741e" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", rev = "dbec741e" }
ts-rs = "11.0"
