[package]
name = "export_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol" }
ts-rs = "11.0"
