[package]
name = "codexia"
version = "0.27.0"
description = "A powerful IDE/GUI and Toolkit for Codex CLI + Claude code"
authors = ["milisp"]
license = "AGPL-3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codexia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["gui"]
gui = ["tauri"]
# core: shared runtime used by both "desktop" and "web" — no P2P, no Tauri
core = [
  # runtime
  "dep:tokio",
  "dep:futures",
  "dep:async-trait",
  # serialization
  "dep:serde",
  "dep:serde_json",
  "dep:serde_yaml",
  "dep:indexmap",
  "dep:toml",
  "dep:toml_edit",
  "dep:base64",
  "dep:chrono",
  # utilities
  "dep:anyhow",
  "dep:log",
  "dep:thiserror",
  "dep:regex",
  "dep:uuid",
  "dep:dirs",
  "dep:which",
  "dep:glob",
  "dep:dashmap",
  "dep:moka",
  # networking
  "dep:reqwest",
  # storage / files
  "dep:rusqlite",
  "dep:zip",
  "dep:tempfile",
  # codex / claude backends
  "dep:codex-protocol",
  "dep:codex-app-server-protocol",
  "dep:claude-agent-sdk-rs",
  "dep:codex-finder",
  # scheduling (automation)
  "dep:tokio-cron-scheduler",
]
# desktop: core + P2P server deps; omit with --no-default-features for iOS builds
desktop = [
  "core",
  "dep:fix-path-env",
  "dep:nosleep",
  "dep:tauri-plugin-screenshots",
  "dep:tauri-plugin-single-instance",
  "dep:tauri-plugin-updater",
  "dep:tauri-plugin-fs",
  "dep:tauri-plugin-process",
  "dep:tauri-plugin-dialog",
  # p2p (desktop server)
  "dep:quinn",
  "dep:rcgen",
  "dep:rustls",
  "dep:local-ip-address",
  # in-process axum router for P2P backend (no port opened, no web feature needed)
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:http-body-util",
  "dep:httparse",
]
tauri = [
  "dep:tokio",
  "dep:log",
  # p2p client (mobile) — quinn QUIC is used on both desktop and iOS
  "dep:quinn",
  "dep:rustls",
  "dep:tauri",
  "dep:serde",        # needed by tauri macros
  "dep:serde_json",   # needed by tauri::generate_context!
  "dep:tauri-plugin-deep-link",
  "dep:tauri-plugin-log",
  "dep:tauri-plugin-opener",
  "dep:tauri-plugin-shell",
]
web = ["core", "dep:env_logger"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- tauri feature (iOS + desktop) ---
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools", "tray-icon"], optional = true }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", optional = true }
tauri-plugin-os = "2"
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }

# --- desktop feature ---
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
futures = { version = "0.3", optional = true }
indexmap = { version = "2.0", features = ["serde"], optional = true }
thiserror = { version = "2.0", optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
dirs = { version = "6.0", optional = true }
toml = { version = "0.9.5", optional = true }
toml_edit = { version = "0.20", optional = true }
base64 = { version = "0.22.1", optional = true }
regex = { version = "1.12.2", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
which = { version = "6.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
async-trait = { version = "0.1", optional = true }
zip = { version = "2.1", optional = true }
tempfile = { version = "3.10", optional = true }
serde_yaml = { version = "0.9", optional = true }
glob = { version = "0.3.3", optional = true }
tokio-cron-scheduler = { version = "0.13", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", tag = "rust-v0.114.0", optional = true }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", tag = "rust-v0.114.0", optional = true }
claude-agent-sdk-rs = { git = "https://github.com/milisp/claude-agent-sdk-rs", optional = true }
codex-finder = { git = "https://github.com/milisp/codex-finder.git", optional = true }

# --- p2p (tauri feature: desktop server + mobile client) ---
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.13", optional = true }
rustls = { version = "0.23", features = ["ring"], default-features = false, optional = true }
local-ip-address = { version = "0.6", optional = true }

# --- web feature ---
axum = { version = "0.8", features = ["ws", "json"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
http-body-util = { version = "0.1", optional = true }
httparse = { version = "1", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }

[target.'cfg(any(target_os = "ios", target_os = "android"))'.dependencies]
rustls = { version = "0.23", features = ["ring"], default-features = false }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-screenshots = { version = "2.2.0", optional = true }
nosleep = { version = "0.2.1", optional = true }
gix = { version = "0.80.0", features = ["blocking-network-client", "blocking-http-transport-curl"] }
walkdir = "2.3"
agent-insights = { git = "https://github.com/milisp/agent-insights", default-features = false }
pdf-extract = "0.7.12"
calamine = "0.25"
notify = "6"
portable-pty = "0.9"
ignore = "0.4.25"
nucleo = "0.5.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"

[dev-dependencies]
tokio-tungstenite = "0.24"
