
[package]
name = "codexia"
version = "0.35.2"
description = "A powerful IDE/GUI and Toolkit for Codex CLI + Claude code"
authors = ["milisp"]
license = "AGPL-3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codexia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-os = "2"
tauri-plugin-opener = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-deep-link = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }

# --- desktop feature ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
futures = { version = "0.3" }
indexmap = { version = "2.0", features = ["serde"] }
thiserror = { version = "2.0" }
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4" }
env_logger = { version = "0.11" }
dirs = { version = "6.0" }
base64 = { version = "0.22.1" }
regex = { version = "1.12.2" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
which = { version = "6.0" }
dashmap = { version = "6.2.1" }
async-trait = { version = "0.1" }
zip = { version = "2.1" }
tempfile = { version = "3.10" }
serde_yaml = { version = "0.9" }
glob = { version = "0.3.3" }
tokio-cron-scheduler = { version = "0.13" }
tauri-plugin-updater = { version = "2" }
codex-protocol = { git = "https://github.com/openai/codex.git", package = "codex-protocol", tag = "rust-v0.140.0" }
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", package = "codex-app-server-protocol", tag = "rust-v0.140.0" }
claude-agent-sdk-rs = { git = "https://github.com/milisp/claude-agent-sdk-rs", tag = "v0.6.6" }
codex-finder = { git = "https://github.com/milisp/codex-finder.git" }

# workspace
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
codexia-codex = { path = "../crates/codex" }
codexia-cc = { path = "../crates/cc" }
codexia-db = { path = "../crates/db" }

codexia-shared = { path = "../crates/shared" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-screenshots = { version = "2.2.0" }
gix = { version = "0.80.0", features = ["blocking-network-client", "blocking-http-transport-curl"] }
codexia-git = { path = "../crates/git" }
walkdir = "2.3"
agent-insights = { git = "https://github.com/milisp/agent-insights", default-features = false }
pdf-extract = "0.7.12"
calamine = "0.25"
notify = { version = "8", features = ["serde", "serialization-compat-6"] }
notify-debouncer-full = "0.6"
portable-pty = "0.9"
ignore = "0.4.25"
nucleo = "0.5.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"
winreg = "0.52"

[dev-dependencies]
tokio-tungstenite = "0.24"
