
[package]
name = "codexia"
version.workspace = true
description = "A powerful IDE/GUI and Toolkit for Codex CLI + Claude code"
authors = ["milisp"]
license = "AGPL-3.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codexia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "devtools"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-os = "2"
tauri-plugin-opener = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-deep-link = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }

# --- workspace deps ---
reqwest = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
moka = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }
tokio-cron-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
codex-protocol = { workspace = true }
codex-app-server-protocol = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
codex-finder = { workspace = true }
codexia-codex = { workspace = true }
codexia-cc = { workspace = true }
codexia-db = { workspace = true }
codexia-shared = { workspace = true }

# --- non-workspace deps ---
tauri-plugin-updater = { version = "2" }
which = { version = "6.0" }

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri-plugin-screenshots = { version = "2.2.0" }
gix = { workspace = true }
codexia-git = { workspace = true }
walkdir = { workspace = true }
agent-insights = { workspace = true }
pdf-extract = { workspace = true }
calamine = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
portable-pty = { workspace = true }
ignore = { workspace = true }
nucleo = { workspace = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
encoding_rs = "0.8"
winreg = "0.52"

[dev-dependencies]
tokio-tungstenite = "0.24"
