[package]
name = "codexia-cc"
version.workspace = true
edition.workspace = true

workspace = "../../"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
base64 = { workspace = true }
codexia-shared = { workspace = true }
codexia-db = { workspace = true }
codexia-codex = { workspace = true }
tokio-cron-scheduler = { workspace = true }
chrono = { workspace = true }

