[package]
name = "codexia-codex"
version.workspace = true
edition.workspace = true

workspace = "../../"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
codex-finder = { workspace = true }
dirs = { workspace = true }
gix = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
codex-protocol = { workspace = true }
codex-app-server-protocol = { workspace = true }

codexia-shared = { path = "../shared" }
codexia-db = { path = "../db" }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"