[package]
name = "codexia-db"
version.workspace = true
edition.workspace = true

workspace = "../../"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

rusqlite = { workspace = true}