[package]
name = "codexia-shared"
version.workspace = true
edition.workspace = true

workspace = "../../"

[features]
default = []
desktop = []
web = []

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
dashmap = { workspace = true }
glob = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
base64 = { workspace = true }
indexmap = { workspace = true }
zip = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
portable-pty = { workspace = true }
ignore = "0.4.25"
reqwest = { workspace = true }
gix = { workspace = true }
walkdir = { workspace = true }
nucleo = { workspace = true }
pdf-extract = { workspace = true }
calamine = { workspace = true }
tokio-cron-scheduler = { workspace = true }
agent-insights = { workspace = true }
nosleep = { version = "0.2.1" }
codexia-git = { workspace = true }
codex-app-server-protocol = { workspace = true }